# SYGAR

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  sweep_config.yaml
bash_scripts/: gen_data.sh  split_data_systematicity.sh  train_mlc.sh
notebooks/: create_batch_files.ipynb  create_few_shot_batch_files.ipynb  create_image_batch_files.ipynb  create_image_few_shot_batch_files.ipynb  gemini_create_batch_files.ipynb  gemini_create_image_batch_files.ipynb  gemini_evaluate_batch_file.ipynb  gpt_evaluate_batch_file.ipynb
scripts/: eval_api_models.py  eval_mlc_model.py  gen_data.py  gen_static_data.py  plot_data_sample.py  split_data_systematicity.py  split_static_data_systematicity.py  train_mlc.py
vmlc/configs/: data_config.yaml  systematicity_data.yaml
vmlc/data_prep/: base_tokenizer.py  constants.py  datamodule.py  dataset.py  patch_tokenizer.py
vmlc/model/: eval_plots.py  metrics.py  model.py  modules.py  positional_encodings.py
vmlc/training/: callbacks.py
vmlc/utils/: __init__.py  plot_utils.py  utils.py  vgrammar_utils.py
vmlc/visual_grammar/: __init__.py  basic_elements.py  function_transforms.py  primitive_transforms.py  study_examples.py  transform_specifier.py
