[tool.poetry]
name = "vmlc"
version = "0.1.0"
description = "Systematic Generalization in Abstract Spatial Reasoning through MLC."
authors = ["Philipp Mondorf <p.mondorf@lmu.de>, Shijia Zhou <Zhou.Shijia@lmu.de>, Monica Riedler <Monica.Riedler@campus.lmu.de>"]
license = "CC BY-SA 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.6.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
torch = "^2.3.1"
scikit-learn = "^1.5.0"
einops = "^0.8.0"
torchvision = "^0.18.1"
tqdm = "^4.66.4"
skorch = "^1.0.0"
pandas = "^2.2.2"
wandb = "^0.17.4"
scipy = "^1.14.0"
pillow = "^10.4.0"
datasets = "^2.20.0"
pytorch-lightning = "^2.4.0"
tensorboard = "^2.18.0"
ipykernel = "^6.29.5"
openai = "^1.65.5"
dotenv = "^0.9.9"
google-genai = "^1.5.0"
google-cloud-storage = "^3.1.0"
accelerate = "^1.5.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
